[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Fondos/skin_selector.png" type="Texture" id=1]
[ext_resource path="res://scene/characterSelector/dino_1.tres" type="Texture" id=2]
[ext_resource path="res://texturas/botones/pixelButton.png" type="Texture" id=3]
[ext_resource path="res://scene/characterSelector/MarginContainer.gd" type="Script" id=4]
[ext_resource path="res://resources/select_character.tres" type="Theme" id=5]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( -3.23047, 571.961, 200.19, 201.52 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( -2.65326, 575.839, 199.724, 194.836 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( -3.00092, 1338.91, 198.088, 198.862 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( -2.64777, 1341.86, 198.911, 195.481 )

[node name="CharacterSelector" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 999.0
margin_bottom = 575.0
texture = ExtResource( 1 )
expand = true

[node name="player_one" type="TextureRect" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 180.5
margin_top = -31.5
margin_right = 220.5
margin_bottom = 8.5
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
expand = true

[node name="player_two" type="TextureRect" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -315.5
margin_top = -39.5
margin_right = -275.5
margin_bottom = 0.500031
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
expand = true

[node name="left_player_one" type="TextureButton" parent="TextureRect"]
anchor_left = 0.089
anchor_top = 0.5
anchor_right = 0.089
anchor_bottom = 0.5
margin_left = 495.314
margin_top = 59.0
margin_right = 535.314
margin_bottom = 99.0
texture_normal = SubResource( 11 )
expand = true

[node name="left_player_two" type="TextureButton" parent="TextureRect"]
anchor_left = 0.335
anchor_top = 0.52
anchor_right = 0.335
anchor_bottom = 0.52
margin_left = -230.29
margin_top = 48.0
margin_right = -190.29
margin_bottom = 88.0
texture_normal = SubResource( 12 )
expand = true

[node name="right_player_two" type="TextureButton" parent="TextureRect"]
margin_left = 424.0
margin_top = 333.0
margin_right = 464.0
margin_bottom = 373.0
texture_normal = SubResource( 13 )
expand = true

[node name="right_player_one" type="TextureButton" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.507
margin_left = 405.0
margin_top = 62.0
margin_right = 445.0
margin_bottom = 97.8
texture_normal = SubResource( 14 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_right = 974.0
margin_bottom = 550.0

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
margin_right = 974.0
margin_bottom = 41.0
theme = ExtResource( 5 )
text = "Press enter to select character"
align = 1

[connection signal="pressed" from="TextureRect/left_player_one" to="." method="_on_left_player_one_pressed"]
[connection signal="pressed" from="TextureRect/left_player_two" to="." method="_on_left_player_two_pressed"]
[connection signal="pressed" from="TextureRect/right_player_two" to="." method="_on_right_player_two_pressed"]
[connection signal="pressed" from="TextureRect/right_player_one" to="." method="_on_right_player_one_pressed"]
